@@ -1,3 +1,7 @@
+Fri Apr 23 16:02:58 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* fairy_perf_graph.rb: 第1版
+
 Wed Apr 14 22:06:46 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* n-mod-group-by.rb, njob.rb, log-analysis.rb: REQ#227対応(その4)
